fix back button spacing

--- a/src/app/portal/components/hearing/hearing.component.scss
+++ b/src/app/portal/components/hearing/hearing.component.scss
@@ -9,10 +9,6 @@
   margin: 0;
 }
 
-.govuk-back-link {
-  margin-top: -25px;
-}
-
 .flex-space-between {
   display: flex;
   justify-content: space-between;
